--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     </a>     
                 </th>
                 <th>
-                    <a href="./tourist Destination.html">
+                    <a href="./tourist destination.html">
                         Tourist Destination
                     </a>
                 </th>
